syntax = "proto3";
package vhu.v1;

import "vhu/v1/definitions.proto";

option go_package = "poc/vhu";
option php_namespace = "App\\Services\\VHU";

// [start] timeline service
message GetTimelineRequest {
  string id = 1;
}

message GetTimelineResponse {
  Timeline timeline = 1;
}

message ListTimelineResponseEntry {
  string id = 1;
  string title = 2;
}

message ListTimelinesRequest {}

message ListTimelinesResponse {
  repeated ListTimelineResponseEntry timelines = 1;
}

service TimelineService {
  rpc GetTimeline(GetTimelineRequest) returns (GetTimelineResponse);
  rpc ListTimelines(ListTimelinesRequest) returns (ListTimelinesResponse);
}
// [end] timeline service

// [start] object service
message GetObjectRequest {
  string id = 1;
}

message GetObjectResponse {
  MuseumObject object = 1;
}

message ListObjectsRequest {
  string query = 1;
  int32 page = 2;
}

message ListObjectsResponse {
  repeated MuseumObject objects = 1;
}

service ConceptualObjectService {
  rpc GetObject(GetObjectRequest) returns (GetObjectResponse);
  rpc ListObjects(ListObjectsRequest) returns (ListObjectsResponse);
}
// [end] object service
